Fix phone uneven displays issues

--- a/styles/design.css
+++ b/styles/design.css
@@ -33,12 +33,16 @@ h2 {
 /**************************************************/
 @media only screen and (min-width: 500px) and (max-width: 1000px) {
     h1 {
-        margin-top: 12vh;
+        margin-top: 15vh;
     }
 }
 
 @media only screen and (max-width: 500px) {
     h1 {
-        margin-top: 8vh;
+        margin-top: 12vh;
+    }
+
+    img {
+        max-width: 100vw;
     }
 }
